--- a/sw/uiconfig/swriter/ui/sidebarwrap.ui
+++ b/sw/uiconfig/swriter/ui/sidebarwrap.ui
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 3.0 -->
+  <requires lib="gtk+" version="3.0"/>
   <object class="GtkGrid" id="WrapPropertyPanel">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -28,7 +29,6 @@
                 <property name="tooltip_markup" translatable="yes">None</property>
                 <property name="tooltip_text" translatable="yes">None</property>
                 <property name="action_name">.uno:WrapOff</property>
-                <property name="use_action_appearance">False</property>
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -40,15 +40,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="buttonbefore">
+              <object class="GtkRadioButton" id="buttonparallel">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Before</property>
-                <property name="tooltip_text" translatable="yes">Before</property>
-                <property name="action_name">.uno:WrapLeft</property>
-                <property name="use_action_appearance">False</property>
+                <property name="tooltip_markup" translatable="yes">Parallel</property>
+                <property name="tooltip_text" translatable="yes">Parallel</property>
+                <property name="action_name">.uno:WrapOn</property>
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -60,15 +59,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="buttonafter">
+              <object class="GtkRadioButton" id="buttonoptimal">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">After</property>
-                <property name="tooltip_text" translatable="yes">After</property>
-                <property name="action_name">.uno:WrapRight</property>
-                <property name="use_action_appearance">False</property>
+                <property name="tooltip_markup" translatable="yes">Optimal</property>
+                <property name="tooltip_text" translatable="yes">Optimal</property>
+                <property name="action_name">.uno:WrapIdeal</property>
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -80,15 +78,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="buttonparallel">
+              <object class="GtkRadioButton" id="buttonbefore">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Parallel</property>
-                <property name="tooltip_text" translatable="yes">Parallel</property>
-                <property name="action_name">.uno:WrapOn</property>
-                <property name="use_action_appearance">False</property>
+                <property name="tooltip_markup" translatable="yes">Before</property>
+                <property name="tooltip_text" translatable="yes">Before</property>
+                <property name="action_name">.uno:WrapLeft</property>
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -100,15 +97,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="buttonthrough">
+              <object class="GtkRadioButton" id="buttonafter">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Through</property>
-                <property name="tooltip_text" translatable="yes">Through</property>
-                <property name="action_name">.uno:WrapThrough</property>
-                <property name="use_action_appearance">False</property>
+                <property name="tooltip_markup" translatable="yes">After</property>
+                <property name="tooltip_text" translatable="yes">After</property>
+                <property name="action_name">.uno:WrapRight</property>
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -120,15 +116,14 @@
               </packing>
             </child>
             <child>
-              <object class="GtkRadioButton" id="buttonoptimal">
+              <object class="GtkRadioButton" id="buttonthrough">
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="tooltip_markup" translatable="yes">Optimal</property>
-                <property name="tooltip_text" translatable="yes">Optimal</property>
-                <property name="action_name">.uno:WrapIdeal</property>
-                <property name="use_action_appearance">False</property>
+                <property name="tooltip_markup" translatable="yes">Through</property>
+                <property name="tooltip_text" translatable="yes">Through</property>
+                <property name="action_name">.uno:WrapThrough</property>
                 <property name="xalign">0</property>
                 <property name="active">True</property>
                 <property name="draw_indicator">True</property>
@@ -146,12 +141,50 @@
             <property name="position">0</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkBox" id="box3">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="spacing">6</property>
+            <child>
+              <object class="GtkCheckButton" id="enablecontour">
+                <property name="label" translatable="yes">Enable Contour</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="xalign">0</property>
+                <property name="draw_indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="editcontour">
+                <property name="label" translatable="yes">Edit Contour</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
       </object>
       <packing>
         <property name="left_attach">0</property>
         <property name="top_attach">0</property>
-        <property name="width">1</property>
-        <property name="height">1</property>
       </packing>
     </child>
   </object>
