Add widget variables, related get/dispose calls
+ mnemonic widgets

Change-Id: I1cfc4c096ea65db8d1b650225106db477b19cf4a

--- a/cui/uiconfig/ui/textchainingtabpage.ui
+++ b/cui/uiconfig/ui/textchainingtabpage.ui
@@ -33,6 +33,8 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Previous link:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">previouslink</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -44,6 +46,8 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Next link:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">nextlink</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -51,7 +55,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBox" id="combobox1">
+                  <object class="GtkComboBox" id="previouslink">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                   </object>
@@ -61,7 +65,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBox" id="combobox2">
+                  <object class="GtkComboBox" id="nextlink">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                   </object>
