tdf#108427 Direct cursor: Add option to insert only spaces
Change-Id: I1136688ec8af44c533f4dd40a9a4b24ea59992ef
Reviewed-on: https://gerrit.libreoffice.org/38685
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Tested-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>

--- a/sw/uiconfig/swriter/ui/optformataidspage.ui
+++ b/sw/uiconfig/swriter/ui/optformataidspage.ui
@@ -177,7 +177,7 @@
                           <object class="GtkLabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="no">¶</property>
+                            <property name="label">¶</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -188,7 +188,7 @@
                           <object class="GtkLabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="no">-</property>
+                            <property name="label">-</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -199,7 +199,7 @@
                           <object class="GtkLabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="no">·</property>
+                            <property name="label">·</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -210,7 +210,7 @@
                           <object class="GtkLabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="no">→</property>
+                            <property name="label">→</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -221,7 +221,7 @@
                           <object class="GtkLabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="no">↵</property>
+                            <property name="label">↵</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -422,7 +422,7 @@
                                     <property name="use_underline">True</property>
                                     <property name="xalign">0</property>
                                     <property name="draw_indicator">True</property>
-                                    <property name="group">fillspace</property>
+                                    <property name="group">filltabandspace</property>
                                   </object>
                                   <packing>
                                     <property name="left_attach">0</property>
@@ -430,7 +430,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkRadioButton" id="fillspace">
+                                  <object class="GtkRadioButton" id="filltabandspace">
                                     <property name="label" translatable="yes">Tabs a_nd spaces</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
@@ -443,6 +443,22 @@
                                   <packing>
                                     <property name="left_attach">0</property>
                                     <property name="top_attach">3</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkRadioButton" id="fillspace">
+                                    <property name="label" translatable="yes">_Spaces</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">False</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="xalign">0</property>
+                                    <property name="draw_indicator">True</property>
+                                    <property name="group">fillmargin</property>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">0</property>
+                                    <property name="top_attach">4</property>
                                   </packing>
                                 </child>
                               </object>
