changed gtkcombobox with svxlo-framedirection
Change-Id: I174221f85842a7b3129a7589cd4959b5edc1e7d9

--- a/sw/uiconfig/swriter/ui/formattablepage.ui
+++ b/sw/uiconfig/swriter/ui/formattablepage.ui
@@ -539,7 +539,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="svxlo-FrameDirectionListBox" id="comboLB_TEXTDIRECTION">
+                  <object class="svxlo-FrameDirectionListBox" id="textdirection">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="model">liststore1</property>
