--- a/sw/uiconfig/swriter/ui/mmresultsavedialog.ui
+++ b/sw/uiconfig/swriter/ui/mmresultsavedialog.ui
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.22.1 -->
 <interface domain="sw">
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkDialog" id="MMResultSaveDialog">
     <property name="can_focus">False</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes" context="mmresultsavedialog|MMResultSaveDialog">Save merged document</property>
+    <property name="modal">True</property>
+    <property name="default_width">0</property>
+    <property name="default_height">0</property>
     <property name="type_hint">dialog</property>
+    <child>
+      <placeholder/>
+    </child>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
         <property name="can_focus">False</property>
@@ -57,6 +63,7 @@
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">2</property>
+                <property name="secondary">True</property>
               </packing>
             </child>
           </object>
@@ -99,7 +106,6 @@
                         <property name="xalign">0</property>
                         <property name="active">True</property>
                         <property name="draw_indicator">True</property>
-                        <property name="group">individualrb</property>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
@@ -115,7 +121,7 @@
                         <property name="use_underline">True</property>
                         <property name="xalign">0</property>
                         <property name="draw_indicator">True</property>
-                        <property name="group">fromrb</property>
+                        <property name="group">singlerb</property>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
@@ -138,7 +144,7 @@
                             <property name="draw_indicator">True</property>
                             <property name="group">singlerb</property>
                             <accessibility>
-                              <relation type="label-for" target="from-nospin"/>
+                              <relation type="label-for" target="from"/>
                             </accessibility>
                           </object>
                           <packing>
@@ -152,7 +158,7 @@
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes" context="mmresultsavedialog|toft">_To</property>
                             <property name="use_underline">True</property>
-                            <property name="mnemonic_widget">to-nospin</property>
+                            <property name="mnemonic_widget">to</property>
                           </object>
                           <packing>
                             <property name="left_attach">2</property>
@@ -160,10 +166,11 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkSpinButton" id="from-nospin">
+                          <object class="GtkSpinButton" id="from">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="text" translatable="no">1</property>
+                            <property name="activates_default">True</property>
+                            <property name="text">1</property>
                             <accessibility>
                               <relation type="labelled-by" target="fromrb"/>
                             </accessibility>
@@ -174,9 +181,10 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkSpinButton" id="to-nospin">
+                          <object class="GtkSpinButton" id="to">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="activates_default">True</property>
                             <property name="text">1</property>
                           </object>
                           <packing>
