--- a/cui/uiconfig/ui/menuassignpage.ui
+++ b/cui/uiconfig/ui/menuassignpage.ui
@@ -374,7 +374,7 @@
         <child>
           <object class="GtkComboBoxText" id="commandcategorylist">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="can_focus">False</property>
             <property name="margin_bottom">4</property>
             <property name="hexpand">True</property>
           </object>
@@ -419,7 +419,7 @@
             <child>
               <object class="GtkComboBoxText" id="savein">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can_focus">False</property>
                 <property name="margin_right">5</property>
                 <property name="hexpand">True</property>
               </object>
@@ -457,7 +457,7 @@
               <object class="GtkComboBoxText" id="toplevellist">
                 <property name="width_request">1</property>
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can_focus">False</property>
                 <property name="hexpand">True</property>
               </object>
               <packing>
