--- a/svx/uiconfig/ui/sidebarparagraph.ui
+++ b/svx/uiconfig/ui/sidebarparagraph.ui
@@ -417,7 +417,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox" id="box13">
+          <object class="GtkBox" id="indentfieldbox">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
