tdf#84342 Change 'Exchange background page' to 'Apply Master Slide ..
to all slides'. Also change text for next checkbox to use Master Slide.

Change-Id: I29cc7ca07e890a99a4362a113e3002690740514e

--- a/sd/uiconfig/simpress/ui/slidedesigndialog.ui
+++ b/sd/uiconfig/simpress/ui/slidedesigndialog.ui
@@ -112,7 +112,7 @@
                     <property name="row_spacing">6</property>
                     <child>
                       <object class="GtkCheckButton" id="masterpage">
-                        <property name="label" translatable="yes" context="slidedesigndialog|masterpage">_Exchange background page</property>
+                        <property name="label" translatable="yes" context="slidedesigndialog|masterpage">_Apply Master Slide to all slides</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
@@ -127,7 +127,7 @@
                     </child>
                     <child>
                       <object class="GtkCheckButton" id="checkmasters">
-                        <property name="label" translatable="yes" context="slidedesigndialog|checkmasters">_Delete unused backgrounds</property>
+                        <property name="label" translatable="yes" context="slidedesigndialog|checkmasters">_Delete unused Master Slides</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
