--- a/cui/uiconfig/ui/paraindentspacing.ui
+++ b/cui/uiconfig/ui/paraindentspacing.ui
@@ -161,6 +161,7 @@
                       <object class="GtkCheckButton" id="checkCB_AUTO">
                         <property name="label" translatable="yes" context="paraindentspacing|checkCB_AUTO">_Automatic</property>
                         <property name="visible">True</property>
+                        <property name="tooltip_text" translatable="yes" context="paraindentspacing|checkCB_AUTO|tooltip_text">Indent paragraph automatically according to font size and line spacing.</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
                         <property name="use_underline">True</property>
@@ -323,7 +324,7 @@
                     </child>
                     <child>
                       <object class="GtkCheckButton" id="checkCB_CONTEXTUALSPACING">
-                        <property name="label" translatable="yes" context="paraindentspacing|checkCB_CONTEXTUALSPACING">Don't add space between paragraphs of the same style</property>
+                        <property name="label" translatable="yes" context="paraindentspacing|checkCB_CONTEXTUALSPACING">Do not add space between paragraphs of the same style</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
@@ -488,7 +489,7 @@
                 <property name="left_padding">12</property>
                 <child>
                   <object class="GtkCheckButton" id="checkCB_REGISTER">
-                    <property name="label" translatable="yes" context="paraindentspacing|checkCB_REGISTER">A_ctivate</property>
+                    <property name="label" translatable="yes" context="paraindentspacing|checkCB_REGISTER">Activate page li_ne-spacing</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_underline">True</property>
@@ -496,16 +497,6 @@
                     <property name="draw_indicator">True</property>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child type="label">
-              <object class="GtkLabel" id="label3">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes" context="paraindentspacing|label3">Follow Page Line Spacing</property>
-                <attributes>
-                  <attribute name="weight" value="bold"/>
-                </attributes>
               </object>
             </child>
           </object>
